[gd_scene load_steps=5 format=2]

[ext_resource path="res://Characters/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Engine/field_of_view.gd" type="Script" id=2]
[ext_resource path="res://Characters/Player/spr_player.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Enemy" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FieldOfView" type="Node" parent="."]
script = ExtResource( 2 )
mesh_resolution = 0.25
edge_resolve_iteration = 15
edge_distance_treshold = 0.1

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
rotation = 1.5708
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Detection" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
